// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMarkdown > emits TypeDoc-style paths when pathStrategy is typedoc 1`] = `
{
  "default/functions/cli.md": "# Function: cli()

<div id="cli" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Runs <a href="/api/default/interfaces/Command">Command</a>.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function cli(): void</code></pre>
</div>
</div>
",
  "default/index.md": "# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [cli](/api/default/functions/cli) | Runs [Command](/api/default/interfaces/Command). |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Command](/api/default/interfaces/Command) | Runtime command. |

",
  "default/interfaces/Command.md": "# Interface: Command

<div id="command" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Runtime command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Command</code></pre>
</div>
</div>
",
  "index.md": "# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

- [default](/api/default)
",
}
`;

exports[`generateMarkdown > emits overview lines and accordion-style details for file docs 1`] = `
{
  "index.md": "# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like \`@api transform\` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
</div>

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./utils.md">utils</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">fn</span><div class="ox-api-module__item"><a href="./utils.md#capitalize" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">capitalize(str: string): string</code></a><span class="ox-api-module__summary">Capitalizes the first letter of a string.</span><span class="ox-api-module__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns string</span></span></div></li>
    </ul>
  </div>
</details>

",
  "utils.md": "# utils.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>returns</span>
</span>
</div>

## Reference

<details id="capitalize" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">capitalize(str: string): string</code><span class="ox-api-entry__description">Capitalizes the first letter of a string.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 param</span><span class="ox-api-badge">returns string</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Capitalizes the first letter of a string.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function capitalize(str: string): string</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<ul class="ox-api-entry__params">
<li class="ox-api-entry__param">
  <div class="ox-api-entry__param-heading">
    <code class="ox-api-entry__param-name">str</code>
    <code class="ox-api-entry__param-type">string</code>
  </div>
  <p class="ox-api-entry__param-description">Input string</p>
</li>
</ul>
</div>
<div class="ox-api-entry__section ox-api-entry__section--returns">
<h4>Returns</h4>
<div class="ox-api-entry__return">
  <code class="ox-api-entry__return-type">string</code>
  <p class="ox-api-entry__return-description">Capitalized string</p>
</div>
</div>
  </div>
</details>

",
}
`;

exports[`generateMarkdown > emits pure Markdown without raw HTML when renderStyle is markdown 1`] = `
"# utils.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

_1 symbols · 1 functions · 1 parameters · 1 returns_

## Reference

### capitalize

Capitalizes the first letter of a string.

#### Signature

\`\`\`ts
export function capitalize(str: string): string
\`\`\`

#### Parameters

- \`str\` (\`string\`) - Input string

#### Returns

\`string\` — Capitalized string

"
`;

exports[`generateMarkdown > passes Markdown display format options to generated Markdown 1`] = `
"# utils.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

_1 symbols · 1 functions · 1 parameters · 1 returns_

## Reference

### capitalize

Capitalizes the first letter of a string.

#### Signature

\`\`\`ts
export function capitalize(str: string): string
\`\`\`

#### Parameters

| Name | Type | Description |
| --- | --- | --- |
| \`str\` | \`string\` | Input string |

#### Returns

\`string\` — Capitalized string

"
`;

exports[`generateMarkdown > passes clean link options to generated Markdown 1`] = `
"# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like \`@api transform\` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="/api-ox/context">context</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">interface</span><div class="ox-api-module__item"><a href="/api-ox/context#commandcontext" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">CommandContext</code></a><span class="ox-api-module__summary">Runtime context.</span></div></li>
    </ul>
  </div>
</details>

"
`;

exports[`generateMarkdown > passes stats and generated-by options to generated Markdown 1`] = `
"# API Documentation

> Use search scopes like \`@api transform\` to limit results to the generated API reference.

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./utils.md">utils</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">fn</span><div class="ox-api-module__item"><a href="./utils.md#capitalize" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">capitalize(str: string): string</code></a><span class="ox-api-module__summary">Capitalizes the first letter of a string.</span></div></li>
    </ul>
  </div>
</details>

"
`;

exports[`generateMarkdown entry points > extracts and renders highlighted interface signatures with generics 1`] = `
{
  "index.md": "# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like \`@api transform\` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="./interface.md">interface</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">interface</span><div class="ox-api-module__item"><a href="./interface.md#rendercontext" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">RenderContext&lt;TValue extends Record&lt;string, unknown&gt; = Record&lt;string, unknown&gt;&gt; extends AsyncDisposable</code></a><span class="ox-api-module__summary">Render context shared by the renderer.</span><span class="ox-api-module__meta"><span class="ox-api-badge">1 member</span></span></div></li>
    </ul>
  </div>
</details>

",
  "interface.md": "# interface.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Reference

<details id="rendercontext" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">interface</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">RenderContext&lt;TValue extends Record&lt;string, unknown&gt; = Record&lt;string, unknown&gt;&gt; extends AsyncDisposable</code><span class="ox-api-entry__description">Render context shared by the renderer.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Render context shared by the renderer.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface RenderContext&lt;TValue extends Record&lt;string, unknown&gt; = Record&lt;string, unknown&gt;&gt; extends AsyncDisposable</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="rendercontext-value">
  <td><code>value</code><span class="ox-api-badge">readonly</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">TValue</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
</div>
  </div>
</details>

",
}
`;

exports[`generateMarkdown extraction > extracts and renders members from documented TypeScript entries 1`] = `
"# command.ts

> 2 documented symbols. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>5</strong>
  <span>members</span>
</span>
</div>

## Reference

<div class="ox-api-controls" data-ox-api-target=".ox-api-entry" role="toolbar" aria-label="Reference display controls">
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="expand">Open all</button>
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="collapse">Close all</button>
</div>

<details id="command" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">interface</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">Command</code><span class="ox-api-entry__description">Runtime command.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">3 members</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Runtime command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Command</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="command-args">
  <td><code>args</code><span class="ox-api-badge">optional</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">string[]</code></td>
  <td></td>
</tr>
<tr id="command-name">
  <td><code>name</code><span class="ox-api-badge">readonly</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">string</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
<div class="ox-api-entry__member-group ox-api-entry__member-group--details">
<h5>Methods</h5>
<div class="ox-api-entry__member-details">
<section id="command-run" class="ox-api-entry__member-detail">
<h5>run()</h5>
<pre><code class="language-typescript">run(ctx: Context): Promise&lt;void&gt;;</code></pre>
<div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--params">
<h6>Parameters</h6>
<ul class="ox-api-entry__member-params"><li><code>ctx</code></li></ul>
</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--returns">
<h6>Returns</h6>
<code class="ox-api-entry__return-type">Promise&lt;void&gt;</code>
</div></section>
</div>
</div>
</div>
  </div>
</details>

<details id="commandoptions" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">type</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">CommandOptions = { name: string; run(ctx: Context): void }</code><span class="ox-api-entry__description">Command options.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">2 members</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Command options.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export type CommandOptions = { name: string; run(ctx: Context): void }</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="commandoptions-name">
  <td><code>name</code></td>
  <td><code class="ox-api-entry__member-type language-typescript">string</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
<div class="ox-api-entry__member-group ox-api-entry__member-group--details">
<h5>Methods</h5>
<div class="ox-api-entry__member-details">
<section id="commandoptions-run" class="ox-api-entry__member-detail">
<h5>run()</h5>
<pre><code class="language-typescript">run(ctx: Context): void;</code></pre>
<div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--params">
<h6>Parameters</h6>
<ul class="ox-api-entry__member-params"><li><code>ctx</code></li></ul>
</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--returns">
<h6>Returns</h6>
<code class="ox-api-entry__return-type">void</code>
</div></section>
</div>
</div>
</div>
  </div>
</details>

"
`;

exports[`writeDocs > does not delete files that were never tracked by the manifest 1`] = `"# Manual"`;

exports[`writeDocs > flattens single typedoc entry root when singleEntryRoot is flatten 1`] = `
{
  "default/functions/cli.md": "# Function: cli()

Runs the CLI.

## Signature

\`\`\`ts
export function cli(): void
\`\`\`
",
  "default/interfaces/Command.md": "# Interface: Command

Runtime command.

## Signature

\`\`\`ts
export interface Command
\`\`\`
",
  "index.md": "# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

Runtime API.

_2 symbols · 1 functions · 1 interfaces_

## Functions

- [cli](/api/default/functions/cli) - Runs the CLI.

## Interfaces

- [Command](/api/default/interfaces/Command) - Runtime command.

",
}
`;

exports[`writeDocs > flattens single typedoc entry root when singleEntryRoot is flatten 2`] = `
"/**
 * Auto-generated API documentation navigation.
 * This file is automatically generated by the docs plugin.
 * Do not edit manually.
 */

export interface NavItem {{
  title: string;
  path: string;
  children?: NavItem[];
}}

export const apiNav: NavItem[] = [
  {
    "title": "Functions",
    "path": "/api/default/functions",
    "children": [
      {
        "title": "cli",
        "path": "/api/default/functions/cli"
      }
    ]
  },
  {
    "title": "Interfaces",
    "path": "/api/default/interfaces",
    "children": [
      {
        "title": "Command",
        "path": "/api/default/interfaces/Command"
      }
    ]
  }
] as const;
"
`;

exports[`writeDocs > removes stale generated files from the previous manifest 1`] = `"# Beta updated"`;

exports[`writeDocs > uses the configured base path for generated nav metadata 1`] = `
"/**
 * Auto-generated API documentation navigation.
 * This file is automatically generated by the docs plugin.
 * Do not edit manually.
 */

export interface NavItem {{
  title: string;
  path: string;
  children?: NavItem[];
}}

export const apiNav: NavItem[] = [
  {
    "title": "Context",
    "path": "/api-ox/context"
  }
] as const;
"
`;

exports[`writeDocs > writes typedoc nested files and nav tree when pathStrategy is typedoc 1`] = `
"/**
 * Auto-generated API documentation navigation.
 * This file is automatically generated by the docs plugin.
 * Do not edit manually.
 */

export interface NavItem {{
  title: string;
  path: string;
  children?: NavItem[];
}}

export const apiNav: NavItem[] = [
  {
    "title": "default",
    "path": "/api/default",
    "children": [
      {
        "title": "Variables",
        "path": "/api/default/variables",
        "children": [
          {
            "title": "version",
            "path": "/api/default/variables/version"
          }
        ]
      },
      {
        "title": "Functions",
        "path": "/api/default/functions",
        "children": [
          {
            "title": "cli",
            "path": "/api/default/functions/cli"
          }
        ]
      }
    ]
  }
] as const;
"
`;
